# SlicerToothAnalyser

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
Documentation/: AnatomicalSegmentation.md  Developers.md  Explanation.md  ReferenceGuide.md  Tutorial.md
ToothAnalyser/: CMakeLists.txt  ToothAnalyser.py
ToothAnalyser/AnatomicalSegmentationLib/: Segmentation.py  isq_to_mhd.py
ToothAnalyser/Resources/UI/: ToothAnalyser.ui
ToothAnalyser/Testing/Python/: ToothAnalyserTests.py
ToothAnalyser/ToothAnalyserLib/Algorithms/: Anatomical.py  Scanco.py  utils.py
ToothAnalyser/ToothAnalyserLib/AnatomicalSegmentation/: Segmentation.py  isq_to_mhd.py
ToothAnalyser/ToothAnalyserLib/SampleData/: ToothCrownMicroCT.py
ToothAnalyser/ToothAnalyserLib/tha/: __init__.py  filtering.py  ml.py  segmentation.py  util.py
ToothAnalyserMicroCT/: CMakeLists.txt  ToothAnalyserMicroCT.py
ToothAnalyserMicroCT/Resources/UI/: ToothAnalyserMicroCT.ui
ToothAnalyserMicroCT/Testing/Python/: ToothAnalyserMicroCTTests.py
ToothAnalyserMicroCT/ToothAnalyserMicroCTLib/Algorithms/: Anatomical.py  Scanco.py  utils.py
ToothAnalyserMicroCT/ToothAnalyserMicroCTLib/SampleData/: ToothCrownMicroCT.py
ToothAnalyserMicroCT/ToothAnalyserMicroCTLib/tha/: dependencies.py  filtering.py  ml.py  segmentation.py  util.py
doc/: Explanation.md  ReferenceGuide.md  Tutorial.md
